[tool.poetry]
name = "ticc"
version = "0.1.0"
description = ""
authors = ["Thomas Alcala Schneider <thomas@lockrmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cvxpy = "^1.3.1"
scikit-learn = "^1.2.2"
snap = "^0.5"
matplotlib = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
